feat: Add GET /tags endpoint to get all tags in the service
